# otus-finalproject

./: CMakeLists.txt  DATA.md  FAULTS.md  README.md  device.cpp  device.h  diagram.drawio  game.cpp  game.h  main.cpp  malfunction.cpp  malfunction.h  penguin.cpp  penguin.h
.github/workflows/: release.yml
docs/: DATA.md  FAULTS.md  diagram.drawio
include/: consolemanager.h  game.h  malfunction.h  penguin.h  utils.h
include/devices/: compressor.h  device.h  deviceparameter.h  deviceregistry.h  fan.h  literals.h  pump.h  units.h
include/observers/: observer.h  penguin.h
src/: game.cpp  main.cpp  malfunction.cpp  penguin.cpp
src/devices/: compressor.cpp  device.cpp  fan.cpp  pump.cpp
src/observers/: observer.cpp  penguin.cpp
tests/: CMakeLists.txt  add_remove_observer.cpp  test_device_registry.cpp
